devops/prometheus/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-route
  namespace: prometheus
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.local`)
      kind: Rule
      services:
        - name: prometheus-server
          port: 80
  tls:
    secretName: prometheus-tls-secret
